added fonts to data\fonts

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ example*/bin/libs/
 example*/bin/*
 !example*/bin/data/.gitkeep
 !example*/bin/data/*.png
-
+!example*/bin/data/fonts*.ttf
+!example*/bin/data/fonts*.otf
 
 #########################
 # openFrameworks patterns
