--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ example*/bin/libs/
 example*/bin/*
 !example*/bin/data/.gitkeep
 !example*/bin/data/*.png
-!example*/bin/data/fonts*.ttf
-!example*/bin/data/fonts*.otf
+!example*/bin/data/fonts/*.ttf
+!example*/bin/data/fonts/*.otf
 
 #########################
 # openFrameworks patterns
