--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 #!example*/bin/data/fonts/*.ttf
 #!example*/bin/data/fonts/*.otf
 
-example*/bin/*
+example*/bin/data/*
 !example*/bin/data/.gitkeep
 !example*/bin/data/*.png
 !example*/bin/data/fonts/*.ttf
