added fonts to data\fonts

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ example*/bin/data/*
 !example*/bin/data/*.png
 !example*/bin/data/fonts/*.ttf
 !example*/bin/data/fonts/*.otf
+#example*/bin/libs/
+example*/bin/*
 
 
 #########################
