--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,8 @@
 #!example*/bin/data/fonts/*.ttf
 #!example*/bin/data/fonts/*.otf
 
-example*/bin/data/*
-!example*/bin/data/.gitkeep
-!example*/bin/data/*.png
-!example*/bin/data/fonts/*.ttf
-!example*/bin/data/fonts/*.otf
-#example*/bin/libs/
 example*/bin/*
-
+!/example*/bin/data
 
 #########################
 # openFrameworks patterns
